--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.13.0
+  cloud_firestore: ^5.6.6
+  firebase_auth: ^5.5.2
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
